--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="https://i.imgur.com/OxIucK1.jpeg">
     <title>not goober dash . ski</title>
     <meta name="description" content="Lovable Generated Project" />
     <meta name="author" content="Lovable" />
